welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:3: error: '<-' expected but '=' found.
 for (p= 1 to 5) {
       ^Poucet:13: error: illegal start of simple expression
} 
^